<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TextViewLogin"
        android:id="@+id/textView_LoginAccount"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">
            <TextView
                android:id="@+id/textView_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/TextViewUserName"
                android:padding="10dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/textView_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="10dp"
                android:text="@string/textView_Password"
                android:textSize="20sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editText_UserName"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_width="220dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding = "20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_Login"
            android:id="@+id/button_login"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"/>
    </LinearLayout>
</LinearLayout>